stopped overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -46,7 +46,7 @@ body {
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-    
+    overflow: hidden;
 }
 
 .colorGuide{
